<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/white_background">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView
                android:text="Kilder"
                android:layout_width="325dp"
                android:layout_height="45dp"
                android:id="@+id/text_fragPartikler"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="36sp"
                android:textColor="@color/FHIblaaVanlig"
                app:layout_constraintVertical_bias="0.041" app:layout_constraintHorizontal_bias="0.372"/>

        <TextView
                android:id="@+id/text_sistEndretHelse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sist endret: 9. Mai 2019 av Thao Tran"
                android:textSize="13dp"
                android:layout_below="@id/text_fragPartikler"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintVertical_bias="0.131"/>

        <TextView
                android:id="@+id/txt_helse_info"
                android:layout_width="378dp"
                android:layout_height="78dp"
                android:text="@string/text_kilde_info"
                android:textSize="15dp"
                android:textStyle="italic"
                android:textColor="@color/FHIblaaVanlig"
                android:layout_below="@id/text_sistEndretHelse"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintVertical_bias="0.2"/>


        <TextView
                android:id="@+id/text_helseTittel2"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:text="@string/text_kilde_tittel_2"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@color/FHIblaaVanlig"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.099"
                app:layout_constraintVertical_bias="0.3"/>

        <TextView
                android:id="@+id/txt_helse_del2"
                android:layout_width="371dp"
                android:layout_height="79dp"
                android:text="@string/text_kilde_1"
                android:textSize="15dp"
                android:textColor="@color/FHIblaaVanlig"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintVertical_bias="0.363"/>

        <TextView
                android:id="@+id/text_helseTittel1"
                android:layout_width="250dp"
                android:layout_height="22dp"
                android:text="@string/text_kilde_tittel_1"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@color/FHIblaaVanlig"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.099"
                app:layout_constraintVertical_bias="0.698"/>

        <!-- Må ha dette textViewet, hvis ikke klikker alt. Herifra-->
        <TextView
                android:id="@+id/txt_tiltak_del2"
                android:layout_width="405dp"
                android:layout_height="703dp"
                android:text=""
                android:textSize="15dp"
                android:textColor="@color/FHIblaaVanlig"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintVertical_bias="1.0"/>

        <!-- Ned hit-->

        <TextView
                android:id="@+id/txt_tiltak_del3"
                android:layout_width="371dp"
                android:layout_height="205dp"
                android:text="@string/text_kilde_2"
                android:textSize="15dp"
                android:textColor="@color/FHIblaaVanlig"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintHorizontal_bias="0.4"/>

        <TextView
                android:id="@+id/text_helseTittel3"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:text="@string/text_kilde_tittel_"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@color/FHIblaaVanlig"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.099"
                app:layout_constraintVertical_bias="0.447"/>

        <TextView
                android:id="@+id/txt_helse_del3"
                android:layout_width="371dp"
                android:layout_height="138dp"
                android:text="@string/text_kilde_3"
                android:textSize="15dp"
                android:textColor="@color/FHIblaaVanlig"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintVertical_bias="0.586"/>


    </android.support.constraint.ConstraintLayout>



</ScrollView>