<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        tools:context=".start.Permission"
        android:layout_height="match_parent">


    <Button
            android:id="@+id/get_notification"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:text="@string/text_location_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.854"
            android:background="@drawable/round_button"
    />

    <Button
            android:id="@+id/maybe_later"
            android:layout_width="176dp"
            android:layout_height="30dp"
            android:text="@string/maybe_later_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.915"
            android:background="@android:color/transparent"/>


    <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/img_2965" android:contentDescription="TODO" tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp"/>

    <TextView
            android:layout_width="303dp"
            android:layout_height="56dp"
            android:text="@string/text_use_permission"
            android:textColor="@color/FHIrodBakgrunn"
            app:layout_constraintTop_toTopOf="@+id/picture" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/picture" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.821" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.92"/>





</android.support.constraint.ConstraintLayout>

